Fix an assert when cloning perspective assistant

The handles in the variables `topLeft`, `topRight`, etc. are but
duplicates of the ones in the handle list, so they must have been
already registered to the new assistant. Registering them twice
will trigger an assert.

BUG: 409249